# Bri

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_ENGINEERING_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_CHANGES.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_TO_TEST.md  DOCS_INDEX.md  Dockerfile.mcp  Dockerfile.ui  FINAL_REPORT.md  FINAL_TASK_SUMMARY.md  GOVERNANCE.md  INDEX.md  LAYOUT_FIXES.md  LOGGING_IMPLEMENTATION.md  MAINTAINERS.md  Makefile  PHASE1_DATABASE_SCHEMA.md  PHASE1_DATABASE_VERIFICATION.md  PHASE1_DATA_FLOW_TRACE.md  PHASE1_DEPENDENCIES_VERIFICATION.md  PHASE1_INTEGRATION_GAPS.md  PHASE1_MCP_SERVER_VERIFICATION.md  PHASE1_TEST_ANALYSIS.md  PHASE1_UI_VERIFICATION.md  QUICK_START.md  README.md  SECURITY.md  STYLING_TEST_CHECKLIST.md  (+29 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
.kiro/specs/bri-video-agent/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.streamlit/: config.toml
docs/: API.md  API_EXAMPLES.md  ARCHITECTURE.md  BACKUP_RESTORE_GUIDE.md  CONFIGURATION.md  DATABASE_MANAGEMENT_GUIDE.md  DATA_FLOW_AUDIT.md  DATA_QUALITY_INTEGRATION_GUIDE.md  DEPLOYMENT.md  ERROR_PATTERNS_SOLUTIONS.md  GOVERNANCE_REPO_SETTINGS.md  INDEX.md  OPERATIONS_RUNBOOK.md  PERFORMANCE_TUNING_GUIDE.md  QUICKSTART.md  README.md  README_TEMPLATE.md  ROOT_CLEANUP_SUMMARY.md  START_BRI_WINDOWS.md  STREAMLIT_CLOUD_DEPLOYMENT.md  TASK_41_SUMMARY.md  TASK_42_SUMMARY.md  TASK_43_SUMMARY.md  TASK_44_SUMMARY.md  TASK_46_SUMMARY.md  TASK_48_SUMMARY.md  TASK_49_IMPLEMENTATION_COMPLETE.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md  VECTOR_DB_EVALUATION.md  VECTOR_SEARCH_INTEGRATION_GUIDE.md  WINDOWS_DEPLOYMENT_GUIDE.md  deployment_summary.md  task_15_ui_foundation.md  task_17_video_upload.md  task_18_summary.md  task_18_usage_guide.md  task_19_video_library.md  task_20_usage_guide.md  (+10 more)
docs/architecture/: DATABASE_SCHEMA_AND_DURABILITY.md  DATA_FLOW_AND_STATE.md  UNCLE_BOB_CLEAN_CODE_REVIEW.md  full_stack_streamlit_middle_layer_plan.md
docs/archive/: ARCHITECTURE_ANALYSIS.md  CLEANUP_PLAN.md  EVALUATION_GUIDE.md  EXECUTION_PLAN.md  QUICK_DATA_FIXES.md  README_PHASE4.md  STYLING_IMPROVEMENTS.md  TASK_ORDER_CHANGES.md  analyze_failures.py  logging_guide.md
docs/research/: current_full_stack_inventory.md  full_stack_streamlit_fastapi_findings.md
docs/styles/: palette.css
docs/tasks/: task_17_implementation_summary.md
mcp_server/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  cache.py  circuit_breaker.py  main.py  middleware.py  registry.py  response_models.py  validation.py  versioning.py
models/: __init__.py  memory.py  responses.py  tools.py  video.py
scripts/: README.md  __init__.py  apply_production_buildout.py  apply_testing_cleanup.py  archival_cli.py  backup_database.py  build_api_reference.py  cli.py  health_check.py  init_db.py  init_docker_db.py  migrate_db.py  patch_optional_dependencies.py  restore_database.py  smoke_api.py  start_dev.bat  start_dev.sh  start_prod.sh  stop_prod.sh  test_cache_layer.py  test_conversation_history.py  test_error_handler_integration.py  test_groq_agent.py  test_image_captioner.py  test_logging.py  test_mcp_server.py  test_object_detector.py  test_task_13_suggestions.py  test_task_17_verification.py  test_task_21_verification.py  test_task_23_integration.py  test_task_42_enhancements.py  test_task_47_caching_optimization.py  test_upload_integration.py  test_vector_search.py  test_video_library.py  upgrade_schema_v2.py  validate_production.py  validate_setup.py  verify_backups.py
scripts/archive/: phase1_verification.py  test_env.py
scripts/deployment/: preflight_check.sh  stop_test.sh
scripts/utils/: check_video_context.py  check_videos.py  diagnose_system.py  list_videos.py  process_test_video.py  quick_fix.py
services/: README_VECTOR_SEARCH.md  agent.py  application.py  context.py  context_builder_summary.md  data_consistency_checker.py  data_lineage_tracker.py  data_observability.py  data_prefetcher.py  data_quality_metrics.py  data_recovery.py  data_validator.py  embedding_pipeline.py  error_handler.py  errors.py  graceful_degradation.py  mcp_client.py  media_response_summary.md  media_utils.py  memory.py  processing_queue.py  progressive_processor.py  router.py  router_summary.md  semantic_search.py  suggestion_summary.md  vector_search_optimizer.py  video_processing_service.py  video_processor.py
storage/: __init__.py  archival.py  backup.py  compression.py  database.py  file_store.py  health_monitor.py  maintenance.py  migrations.py  multi_tier_cache.py  query_optimizer.py  schema.sql
tests/: README.md  eval_bri_performance.py  test_agent_quality.py  test_chat_interface.py  test_data_completeness.py  test_data_quality.py  test_e2e_real_video.py  test_frontend_complete.py  test_performance_benchmark.py  test_property_snapshot_contract.py
tests/__snapshots__/: test_property_snapshot_contract.ambr
tests/integration/: test_e2e_video_processing.py  test_error_handling.py
tests/production/: test_agent_contract.py  test_api_contract.py  test_config_validation.py  test_full_stack_middle_layer_contract.py  test_production_contract.py  test_storage_contract.py
tests/unit/: test_audio_transcriber.py  test_errors.py  test_frame_extractor.py  test_image_captioner.py  test_memory.py  test_object_detector.py  test_router.py
tools/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  audio_transcriber.py  audio_transcriber_summary.md  frame_extractor.py  image_captioner.py  image_captioner_summary.md  object_detector.py  object_detector_summary.md
ui/: README.md  __init__.py  chat.py  chat_workflow.py  history.py  lazy_loader.py  library.py  logging_dashboard.py  player.py  shell.py  styles.py  welcome.py
utils/: README.md  __init__.py  logging_config.py  metrics_logger.py
(+78 files in other folders)
