[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bri-video-agent"
version = "1.0.0"
description = "BRI is a production-ready Streamlit and FastAPI video intelligence assistant powered by Python API integrations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexi5000" }]
keywords = ["video-analysis", "streamlit", "fastapi", "groq", "mcp", "python"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: FastAPI",
  "Framework :: Pydantic",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "streamlit>=1.28.0",
  "groq>=0.4.0",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.5.0",
  "requests>=2.31.0",
  "httpx>=0.24.0",
]

[project.optional-dependencies]
ai = [
  "transformers>=4.35.0",
  "torch>=2.1.0",
  "openai-whisper>=20231117",
  "ultralytics>=8.0.0",
  "chromadb>=0.4.0",
  "sentence-transformers>=2.2.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
]

[tool.setuptools]
py-modules = ["app", "config"]

[tool.setuptools.packages.find]
include = ["models*", "services*", "storage*", "tools*", "utils*", "mcp_server*", "components*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["data", "logs", ".git", ".venv", "venv"]
asyncio_mode = "auto"
addopts = "-q --strict-markers --disable-warnings"
markers = [
  "integration: exercises cross-module application behavior",
  "slow: exercises model or media-heavy workflows",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["data", "logs", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.coverage.run]
source = ["config", "models", "services", "storage", "mcp_server", "tools", "ui"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
