[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bri-video-agent"
version = "1.1.0"
description = "Empathetic multimodal video intelligence: Streamlit UI, FastAPI MCP server, and optional local BLIP/Whisper/YOLOv8 tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexi5000", email = "alexjobs23@gmail.com" }]
keywords = ["video-analysis", "streamlit", "fastapi", "groq", "mcp", "blip", "whisper", "yolov8", "python"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: FastAPI",
  "Framework :: Pydantic",
  "Framework :: Streamlit",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "streamlit>=1.28.0",
  "groq>=0.4.0",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.5.0",
  "requests>=2.31.0",
  "httpx>=0.24.0",
]

[project.scripts]
bri-video-agent = "scripts.cli:main"
bri-mcp = "scripts.cli:run_mcp"
bri-ui = "scripts.cli:run_ui"

[project.optional-dependencies]
ai = [
  "transformers>=4.35.0",
  "torch>=2.1.0",
  "openai-whisper>=20231117",
  "ultralytics>=8.0.0",
  "chromadb>=0.4.0",
  "sentence-transformers>=2.2.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "hypothesis>=6.0.0",
  "syrupy>=4.0.0",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
  "pymdown-extensions>=10.0.0",
]

# Note: [project.urls] is intentionally omitted. Recent setuptools versions
# auto-inject the optional-dependencies table into urls.dependencies and
# project.scripts.dependencies, which the pyproject validator then rejects.
# Project URLs are documented in README.md and the package description.

[tool.setuptools]
py-modules = ["app", "config"]

[tool.setuptools.packages.find]
include = ["models*", "services*", "storage*", "tools*", "utils*", "mcp_server*", "components*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["data", "logs", ".git", ".venv", "venv"]
asyncio_mode = "auto"
addopts = "-q --strict-markers --disable-warnings"
markers = [
  "integration: exercises cross-module application behavior",
  "slow: exercises model or media-heavy workflows",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["data", "logs", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.coverage.run]
source = ["config", "models", "services", "storage", "mcp_server", "tools", "ui"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "services.errors",
  "mcp_server.response_models",
  "models.memory",
  "models.responses",
  "models.tools",
  "models.video",
]
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "services.application",
  "services.mcp_client",
  "services.memory",
  "services.error_handler",
  "services.router",
  "services.context",
  "services.processing_queue",
  "services.semantic_search",
  "services.embedding_pipeline",
  "services.graceful_degradation",
  "services.video_processing_service",
  "services.video_processor",
  "services.data_validator",
  "services.data_consistency_checker",
  "services.data_lineage_tracker",
  "services.data_quality_metrics",
  "services.data_observability",
  "services.data_prefetcher",
  "services.data_recovery",
  "services.vector_search_optimizer",
  "mcp_server.cache",
  "mcp_server.circuit_breaker",
  "mcp_server.middleware",
  "mcp_server.registry",
  "mcp_server.validation",
  "mcp_server.versioning",
  "storage.archival",
  "storage.backup",
  "storage.compression",
  "storage.database",
  "storage.file_store",
  "storage.health_monitor",
  "storage.maintenance",
  "storage.migrations",
  "storage.multi_tier_cache",
  "storage.query_optimizer",
  "utils.logging_config",
  "utils.metrics_logger",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "groq.*",
  "transformers.*",
  "ultralytics.*",
  "openai_whisper.*",
  "PIL.*",
  "cv2.*",
  "chromadb.*",
  "sentence_transformers.*",
  "redis.*",
  "streamlit.*",
  "hypothesis.*",
  "syrupy.*",
  "pytest.*",
  "fastapi.*",
  "pydantic.*",
]
ignore_missing_imports = true